# imersao03

./: globals.py  ipca.py  pyproject.toml  requirements.txt  server.py  ui.py  utils.py
.github/workflows/: deploy.yml
dados/: df_diaria.parquet  df_mensal.parquet  df_previsao.parquet  tracking.csv
rsconnect-python/: imersao03.json
